# cpp-intro

./: Makefile  README.md  metadata.tex
01-introcpp/: Makefile.def  Makefile.mk  bib.tex  content.tex  ej.tex  hoja-ej.tex  lecturas.tex  leng-cpp.tex  main.tex  primer-cpp.tex  slides.tex
02-hola/: Makefile.def  Makefile.mk  content.tex  ejercicios.tex  hoja-ej.tex  lecturas.tex  main.tex  primer-cpp.tex  slides.tex
02-valores/: Makefile.def  content.tex  conversiones.tex  es-basica.tex  main.tex  slides.tex  variables.tex
03-valores/: Makefile.def  Makefile.mk  content.tex  conversiones.tex  ejercicios.tex  es-basica.tex  expresiones.tex  hoja-ej.tex  lecturas.tex  main.tex  slides.tex  variables.tex
03-vector/: Makefile.def  Makefile.mk  content.tex  ejemplos.tex  intro.tex  main.tex  recorrido.tex  slides.tex  vector.tex
04-control/: Makefile.def  Makefile.mk  content.tex  ejercicios.tex  funciones.tex  hoja-ej.tex  iteracion.tex  lecturas.tex  main.tex  seleccion.tex  slides.tex
04-errores/: Makefile.def  content.tex  debugtest.tex  main.tex  prepost.tex  slides.tex  tipos.tex
04-vector/: Makefile.def  content.tex  ejemplos.tex  ejercicios.tex  intro.tex  main.tex  recorrido.tex  slides.tex  tamvec.tex
05-alcance/: Makefile.def  Makefile.mk  alcance.tex  content.tex  decldef.tex  main.tex  paramret.tex  slides.tex
05-errores/: Makefile.def  content.tex  main.tex  prepost.tex  slides.tex  tipos.tex
05-vector/: Makefile.def  intro.tex  (+8 more)
ejemplos/06-errores/prepost/: .clang-format  CMakeLists.txt  check.cpp  contract_check.cpp  contracts.h  nocheck.cpp
(+434 files in other folders)
